adds the button to the index.html

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
       <label for="event-id">Click on the Pepe you like more!</label>
             <button
             data-npub="npub1vp8fdcyejd4pqjyrjk9sgz68vuhq7pyvnzk8j0ehlljvwgp8n6eqsrnpsw"
-            data-relays="wss://relay.damus.io,wss://relay.snort.social,wss://nostr.wine,wss://relay.nostr.band"
+            data-relays="wss://relay.damus.io,wss://relay.nostrfreaks.com"
             >
                 <img id="voteoption1-btn" />
             </button>
             <button 
             data-npub="npub1vp8fdcyejd4pqjyrjk9sgz68vuhq7pyvnzk8j0ehlljvwgp8n6eqsrnpsw"
-            data-relays="wss://relay.damus.io,wss://relay.snort.social,wss://nostr.wine,wss://relay.nostr.band"
+            data-relays="wss://relay.damus.io,wss://relay.nostrfreaks.com"
             >
                 <img id="voteoption2-btn" />
             </button>
