adds zap button

--- a/index.html
+++ b/index.html
@@ -182,6 +182,14 @@
                         "
                     />
                 </div>
+                <div>
+                    <button
+                        data-npub="npub13tn44ckhtf76rmg32us9njawye6wa0rlkt975c9c8kv0rstzy9xs9rhwpt"
+                        data-relays="wss://relay.primal.net"
+                    >
+                        Zap the devs!
+                    </button>
+                </div>
             </div>
 
             <div class="leaderboard-section" style="display: none">
