--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <img id="profile-pic" alt="User Profile Picture" />
                     </div>
                     <div class="login-btn-container">
-                        <button id="login-btn">Nostr Login</button>
+                        <button id="login-btn">Please Login</button>
                     </div>
                 </div>
             </div>
