--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                padding: 0 1rem;
             }
 
             .nav-links {
                 display: flex;
                 gap: 20px;
+                align-items: center;
             }
 
             .nav-links a {
@@ -128,6 +130,58 @@
                 width: 64px;
                 height: 64px;
                 border-radius: 50%;
+            }
+
+            /* Mobile styles */
+            @media screen and (max-width: 768px) {
+                .nav-content {
+                    flex-direction: column;
+                    gap: 1rem;
+                    padding: 0.5rem;
+                }
+
+                .nav-links {
+                    width: 100%;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    gap: 10px;
+                }
+
+                .nav-links a {
+                    font-size: 0.9rem;
+                    padding: 0.4rem 0.8rem;
+                }
+
+                h1 {
+                    font-size: 1.5rem;
+                }
+
+                #profile-pic {
+                    width: 48px;
+                    height: 48px;
+                }
+
+                .login-btn-container {
+                    margin-left: 0;
+                }
+
+                button {
+                    padding: 0.4rem 0.8rem;
+                    font-size: 0.9rem;
+                }
+            }
+
+            /* Very small screens */
+            @media screen and (max-width: 360px) {
+                .nav-links {
+                    flex-direction: column;
+                    align-items: center;
+                }
+
+                .nav-links a {
+                    width: 100%;
+                    text-align: center;
+                }
             }
         </style>
     </head>
@@ -313,7 +367,10 @@
                                 ws.close();
                             }
                             if (message[0] == "NOTICE") {
-                                if (message.length > 1) console.log(`notice from ${relay}: ${JSON.stringif(message[1])}`);
+                                if (message.length > 1)
+                                    console.log(
+                                        `notice from ${relay}: ${JSON.stringif(message[1])}`,
+                                    );
                             }
                         };
                         ws.onerror = (err) => {
@@ -377,7 +434,10 @@
                                 ws.close();
                             }
                             if (message[0] == "NOTICE") {
-                                if (message.length > 1) console.log(`notice from ${relay}: ${JSON.stringif(message[1])}`);
+                                if (message.length > 1)
+                                    console.log(
+                                        `notice from ${relay}: ${JSON.stringif(message[1])}`,
+                                    );
                             }
                         };
                         ws.onerror = (err) => {
@@ -448,8 +508,11 @@
                                 ws.close();
                             }
                             if (message[0] == "NOTICE") {
-                                if (message.length > 1) console.log(`notice from ${relay}: ${JSON.stringif(message[1])}`);
-                            }                            
+                                if (message.length > 1)
+                                    console.log(
+                                        `notice from ${relay}: ${JSON.stringif(message[1])}`,
+                                    );
+                            }
                         };
                         ws.onerror = (err) => {
                             console.error(
@@ -612,11 +675,11 @@
                                 } catch (e) {
                                     // set a default image indicating logged in
                                     document.getElementById("profile-pic").src =
-                                    "https://cornychat.com/img/emojis/emoji-E4.png";
+                                        "https://cornychat.com/img/emojis/emoji-E4.png";
                                 }
                                 document.querySelector(
-                                        ".profile-pic-container",
-                                    ).style.display = "block";                                
+                                    ".profile-pic-container",
+                                ).style.display = "block";
                                 document.querySelector(
                                     ".vote-section",
                                 ).style.display = "block";
